@@ -126,7 +126,6 @@ omnimatter-pure-lvl-per-tier=Number of pure extraction techs between each tier.
 omnimatter-impure-lvls=Number of impure techs.
 omnimatter-fluid-lvl-per-tier=Number of fluid levels per tier.
 omnimatter-fluid-lvl=Number of fluid levels.
-omnimatter-fluid-dependency=Tier dependency on fluid.
 omnimatter-pure-tech-tier-cost-increase=Pure tech cost increase by tier.
 omnimatter-pure-tech-level-cost-increase=Constant for tech increase by level.
 omnimatter-beginner-multiplier=Beginner help
@@ -142,7 +141,6 @@ omnimatter-pure-lvl-per-tier=Sets the number of pure extraction techs for each o
 omnimatter-impure-lvls=Sets the number of impure extraction techs for each ore. Can be between 2 and 6.
 omnimatter-fluid-lvl-per-tier=Sets the number of fluid extraction techs for each fluid between each omnitractor tier. Can be between 1 and 3.
 omnimatter-fluid-lvl=Sets the number of fluid extraction techs required to reach maximum efficiency.(Sets the max amount of fluid level techs!) Can be between 2 and 10.
-omnimatter-fluid-dependency=At this level of fluid tech the next tier of omnitractor is researchable. Can be between 1 and 10.
 omnimatter-pure-tech-tier-cost-increase=Pure extraction technologies increase by this power for each increase in tier.
 omnimatter-pure-tech-level-cost-increase=Determines how quickly the cost of tech levels increase. Warning, this is cumulative and therefore very sensitive, especially with many techs.
 omnimatter-beginner-multiplier=Early Tech Cost Multiplier: Multiply all techs prior to "Electric Omnitractor 1" by this value. An amount smaller than 1 will make these techs cheaper. Range: 0.2 to 5
