@@ -465,15 +465,15 @@ local function get_tractor_req(i)
 	--end
 	if i == 2 then
 		if data.raw.technology["omnitech-omnisolvent-omnisludge-"..(i-2)] then
-			r[#r+1]="omnitech-omnisolvent-omnisludge-"..(i-2)*omni.fluid_levels_per_tier+omni.fluid_dependency
+			r[#r+1]="omnitech-omnisolvent-omnisludge-"..(i-2)*omni.fluid_levels_per_tier*2
 		end
 	end
 	for j,tier in pairs(omni.matter.omnifluid) do
 		if tonumber(j) < i and tonumber(j) >= i-3 then
 			for _,fluid in pairs(tier) do
-				if omni.fluid_levels_per_tier*(i-fluid.tier-1)+omni.fluid_dependency <= omni.fluid_levels then
-					r[#r+1]="omnitech-distillation-"..fluid.name.."-"..omni.fluid_levels_per_tier*(i-fluid.tier-1)+omni.fluid_dependency
-				elseif omni.fluid_levels_per_tier*(i-fluid.tier-1)+omni.fluid_dependency > omni.fluid_levels then
+				if omni.fluid_levels_per_tier*(i-fluid.tier-1)*2 <= omni.fluid_levels then
+					r[#r+1]="omnitech-distillation-"..fluid.name.."-"..omni.fluid_levels_per_tier*(i-fluid.tier-1)*2
+				elseif omni.fluid_levels_per_tier*(i-fluid.tier-1)*2 > omni.fluid_levels then
 					r[#r+1]="omnitech-distillation-"..fluid.name.."-"..omni.fluid_levels
 				end
 			end
