@@ -5,6 +5,7 @@ Date: 2021.03.xx
       - Moved all Pure omnitraction 1 tier up. You cant jump through impure omnitractions now :)
       - Removed the "omnimatter-tier-impure-dependency" setting
       - Removed the "omnimatter-tier-pure-dependency" setting
+      - Removed the "omnimatter-fluid-dependency" setting 
       - Renamed "omnimatter-impure-lvl-per-tier" to o"mnimatter-impure-lvls", check your settings!
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.11
